fixed state in playbook (kind of typo)

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,7 +10,7 @@
 - file: state=directory path=/etc/docker-compose/{{ docker_app_name }} owner=root group=docker mode=755
   sudo: yes
 
-- file: state=present src={{ docker_compose_file }} dest=/etc/docker-compose/{{ docker_app_name }}/docker-compose.yml
+- file: state=file src={{ docker_compose_file }} dest=/etc/docker-compose/{{ docker_app_name }}/docker-compose.yml
   sudo: yes
 
 - template: src=parameters.j2 dest=/etc/sysconfig/docker-{{ docker_app_name }}
