--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,6 +17,12 @@
 
 - template: src=parameters.j2 dest=/etc/sysconfig/docker-compose-{{ docker_app_name }}
   sudo: yes
+  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+
+- template: src=parameters.j2 dest=/etc/default/docker-compose-{{ docker_app_name }}
+  sudo: yes
+  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+
 
 - template: src=docker-compose-permanent.j2 dest="/lib/systemd/system/docker-compose-permanent@.service"
   sudo: yes
